syntax = "proto3";

package light_lamp;

message Color {
  fixed32 value = 1; // Represents the color as an unsigned 32-bit integer
                     // (e.g., ARGB or RGB)
}

message LightLampActionRequest {
  optional bool turn_on = 1;
  optional int32 brightness = 2;
  optional Color color = 3;
}

message LightSensorData {
  int32 brightness = 1;
  Color color = 2;
  float brightness_percentage = 3;
}